Convert native query tests to use QueryNG